Add figure and table alternative captions

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -22,7 +22,7 @@ En la actualidad, existen multitud de soluciones energéticas con las que aprovi
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/instalacion-bess.jpg}
-  \caption{Ilustración de la disposición de una instalación híbrida de generación y almacenamiento~\cite{deutz2023what}.}
+  \caption[Ilustración de la disposición de una instalación híbrida.]{Ilustración de la disposición de una instalación híbrida de generación y almacenamiento~\cite{deutz2023what}.}
   \label{fig:instalacion-bess}
 \end{figure}
 
