--- a/chapter2.tex
+++ b/chapter2.tex
@@ -12,7 +12,7 @@ Por ello, la viabilidad económica depende intrínsecamente de la capacidad del 
 \begin{figure}
   \centering
   \includegraphics[width=0.6\linewidth]{figures/precio-casacion.png}
-  \caption{Curva de casación real del inicio del mes de agosto del mercado eléctrico marginalista, donde tan solo las ofertas de compra por encima y de venta por debajo del precio de casación son aceptadas.}
+  \caption[Curva de casación del mercado eléctrico.]{Curva de casación real del inicio del mes de agosto del mercado eléctrico marginalista, donde tan solo las ofertas de compra por encima y de venta por debajo del precio de casación son aceptadas.}
   \label{fig:precio-casacion}
 \end{figure}
 
@@ -26,7 +26,7 @@ Los \glspl{bess} en los mercados eléctricos, aunque prometedores, se encuentran
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/rate-of-learning.jpg}
-  \caption{Representación de la reducción de los costes de las baterías según su uso, se observa una reducción del 10--35\% cada vez que se dobla la producción~\cite{irena2025irena}.}
+  \caption[Reducción de los costes de las baterías por su uso.]{Representación de la reducción de los costes de las baterías según su uso, se observa una reducción del 10--35\% cada vez que se dobla la producción~\cite{irena2025irena}.}
   \label{fig:rate-of-learning}
 \end{figure}
 
@@ -41,14 +41,14 @@ En la actualidad, se subraya que la producción del mercado ibérico es ínfima 
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/arbitraje-tecnologia.jpg}
-  \caption{Negociación por tecnologías del inicio del mes de junio, donde las tecnologías más caras, como el ciclo combinado, abarcan la mayor parte de la generación cuando no hay tanto recurso renovable.}
+  \caption[Negociación por tecnologías.]{Negociación por tecnologías del inicio del mes de junio, donde las tecnologías más caras, como el ciclo combinado, abarcan la mayor parte de la generación cuando no hay tanto recurso renovable.}
   \label{fig:arbitraje-tecnologia}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=0.4\linewidth]{figures/comparacion-energia-ciclada.png}
-  \caption{Comparación entre la media de la energía diaria real arbitrada durante mes de agosto entre el bombeo y las baterías, negociadas públicamente por el sistema desarrollado.}
+  \caption[Comparación de la energía diaria arbitrada.]{Comparación entre la media de la energía diaria real arbitrada durante mes de agosto entre el bombeo y las baterías, negociadas públicamente por el sistema desarrollado.}
   \label{fig:comparacion-energia-ciclada}
 \end{figure}
 
