--- a/chapter6.tex
+++ b/chapter6.tex
@@ -29,7 +29,7 @@ Dependiendo de la posición de arbitraje, la batería puede encontrarse a difere
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/perfil-potencia.png}
-  \caption{Modulación del perfil de potencia de una batería.}
+  \caption[Modulación del perfil de potencia de una batería.]{Modulación del perfil de potencia de una batería.}
   \label{fig:perfil-potencia}
 \end{figure}
 
@@ -63,7 +63,7 @@ Aún habiendo convertido las unidades, se continua teniendo un problema, explica
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/carga-descarga.png}
-  \caption{Diagrama de un sistema de control de baterías con señales de carga y descarga independientes~\cite{sunkko2025two}.}
+  \caption[Diagrama de un sistema de control de baterías.]{Diagrama de un sistema de control de baterías con señales de carga y descarga independientes~\cite{sunkko2025two}.}
   \label{fig:carga-descarga}
 \end{figure}
 
@@ -91,7 +91,7 @@ Por ejemplo, una situación en la que una carga y descarga simultanea podría su
     H22Q4   & 5.5                          & 32.5                            & 32.5                             & 73.00                                           \\
     \hline
   \end{tabular}
-  \caption{Límite de programa donde, desde el periodo H21Q1 al H22Q1, la exportación de la generación está limitada mientras que la batería es capaz de exportar libremente, pudiendo causar conflictos entre la carga de aprovechamiento de la generación y la descarga de la venta en precios altos.}
+  \caption[Límites de programa y conflictos en la exportación.]{Límite de programa donde, desde el periodo H21Q1 al H22Q1, la exportación de la generación está limitada mientras que la batería es capaz de exportar libremente, pudiendo causar conflictos entre la carga de aprovechamiento de la generación y la descarga de la venta en precios altos.}
   \label{tab:carga-descarga-simultanea}
 \end{table}
 
@@ -103,7 +103,7 @@ Con las posiciones transformadas en potencia, solo se toman en cuenta los cambio
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/diferencia-perfil-potencia.png}
-  \caption{Perfil de potencia diferencial.}
+  \caption[Perfil de potencia diferencial.]{Perfil de potencia diferencial.}
   \label{fig:diferencia-perfil-potencia}
 \end{figure}
 
@@ -470,7 +470,7 @@ Finalmente, la oferta se comunica con la herramienta externa de resolución de o
       \hline
     \end{tabular}
   }
-  \caption{Formato de oferta de mercado.}
+  \caption[Formato de oferta de mercado.]{Formato de oferta de mercado.}
   \label{tab:formato-oferta}
 \end{table}
 
@@ -486,7 +486,7 @@ Principalmente motivado por dicho propósito y con el objetivo de facilitar la o
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/cuadro-de-mando.png}
-  \caption{Cuadro de mando del sistema.}
+  \caption[Cuadro de mando del sistema.]{Cuadro de mando del sistema.}
   \label{fig:cuadro-de-mando}
 \end{figure}
 
@@ -507,7 +507,7 @@ En ella, es posible modificar la configuración operativa de cada una de las ins
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/configuración-sistema.png}
-  \caption{Configuración del sistema a través del cuadro de mandos.}
+  \caption[Configuración del sistema.]{Configuración del sistema a través del cuadro de mandos.}
   \label{fig:configuración-sistema}
 \end{figure}
 
@@ -523,7 +523,7 @@ También se permite especificar tanto un programa, en donde se realize el seguim
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/soc-manual.png}
-  \caption{Regulación manual del estado de carga.}
+  \caption[Regulación manual del estado de carga.]{Regulación manual del estado de carga.}
   \label{fig:soc-manual}
 \end{figure}
 
@@ -534,34 +534,34 @@ Finalmente, se presentan los \gls{kpi} en forma de los ingresos obtenidos por en
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/kpi-sistema.png}
-  \caption{Indicadores de rendimiento.}
+  \caption[Indicadores de rendimiento.]{Indicadores de rendimiento.}
   \label{fig:kpi-sistema}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/perfil-generacion.png}
-  \caption{Perfil de generación.}
+  \caption[Perfil de generación.]{Perfil de generación.}
   \label{fig:perfil-generacion}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/programa-optimo.png}
-  \caption{Programa óptimo de la batería.}
+  \caption[Programa óptimo de la batería.]{Programa óptimo de la batería.}
   \label{fig:programa-optimo}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/soc-bess.png}
-  \caption{Estado de carga de la batería.}
+  \caption[Estado de carga de la batería.]{Estado de carga de la batería.}
   \label{fig:soc-bess}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/limitaciones-tecnicas.png}
-  \caption{Limitaciones técnicas de la instalación.}
+  \caption[Limitaciones técnicas de la instalación.]{Limitaciones técnicas de la instalación.}
   \label{fig:limitaciones-tecnicas}
 \end{figure}
