--- a/chapter7.tex
+++ b/chapter7.tex
@@ -10,7 +10,7 @@ El apartado de infraestructura operacional~\ref{makereference3} funciona continu
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/flujo-procesamiento.png}
-  \caption{Flujo de procesamiento de la información del sistema.}
+  \caption[Flujo de procesamiento de la información del sistema.]{Flujo de procesamiento de la información del sistema.}
   \label{fig:flujo-procesamiento}
 \end{figure}
 
@@ -44,7 +44,7 @@ Junto a ello, cabe destacar que no se han tenido en cuenta las gigantescas ayuda
     147  & Programa de consumo & M\_PC\_AA & Baja     \\
     \hline
   \end{tabular}
-  \caption{Rentabilidad a lo largo del tiempo de un sistema de almacenamiento en baterías.}
+  \caption[Rentabilidad a lo largo del tiempo de un sistema de almacenamiento en baterías.]{Rentabilidad a lo largo del tiempo de un sistema de almacenamiento en baterías.}
   \label{tab:rentabilidad-bess}
 \end{table}
 
@@ -64,7 +64,7 @@ Como se puede observar en la figura~\ref{fig:manual-vs-auto}, los dos principale
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/manual-vs-auto.png}
-  \caption{Comparación del arbitraje entre la estrategia manual y la empleada por el sistema.}
+  \caption[Comparación del arbitraje entre la estrategia manual y la automática.]{Comparación del arbitraje entre la estrategia manual y la empleada por el sistema.}
   \label{fig:manual-vs-auto}
 \end{figure}
 
@@ -85,7 +85,7 @@ La razón de la menor rentabilidad de la topología aislada viene dada porque su
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/aislado-vs-híbrido.png}
-  \caption{Resultados de arbitraje de las configuraciones topológicas de la infraestructura aislada e híbrida.}
+  \caption[Resultados de arbitraje de configuraciones topológicas.]{Resultados de arbitraje de las configuraciones topológicas de la infraestructura aislada e híbrida.}
   \label{fig:aislado-vs-híbrido}
 \end{figure}
 
@@ -99,7 +99,7 @@ Aunque las tres configuraciones híbridas sean capaces de aprovechar y rentabili
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/híbrido-vs-híbrido.png}
-  \caption{Comparativa del rendimiento de cada topología híbrida.}
+  \caption[Comparativa del rendimiento de cada topología híbrida.]{Comparativa del rendimiento de cada topología híbrida.}
   \label{fig:híbrido-vs-híbrido}
 \end{figure}
 
@@ -123,7 +123,7 @@ La temporalidad se aprecia en los precios del mercado, variando drásticamente s
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/temporalidad-mercado.png}
-  \caption{Variación del precio de mercado según el día de la semana.}
+  \caption[Variación del precio de mercado según el día de la semana.]{Variación del precio de mercado según el día de la semana.}
   \label{fig:temporalidad-mercado}
 \end{figure}
 
