--- a/principal.tex
+++ b/principal.tex
@@ -52,11 +52,7 @@
 
 \section*{Todo}
 \begin{enumerate}
-  \item Formato de nombres de librería  \texttt{\textbackslash textsc\{\}}
-  \item Acrónimos MD MI MIC LP MILP MIBEL (mercado ibérico, mercado eléctrico, ...) (<1 día)
-  \item Imágenes y tablas optional caption \texttt{\textbackslash caption[]\{\}} para que no salgan las citas en el indice de figuras y tablas (<1 día)
-  \item Resumen en inglés de media página, incluyendo el título en inglés y una lista de no más de 10 palabras clave en inglés (<1 día)
-  \item ¿Anexo de símbolos? (1 día)
+  \item Revisar apartado 5 (Acrónimos LP MILP)
   \item Completar figuras (¿diagrama por apartado principal?) (2 días)
 \end{enumerate}
 
@@ -92,13 +88,13 @@
 \input{chapter2.tex}
 \input{chapter3.tex}
 \input{chapter4.tex}
-% \input{chapter5.tex}
+\input{chapter5.tex}
 \input{chapter6.tex}
 % \input{chapter7.tex}
 \input{chapter8.tex}
 
 \nocite{*}
-\bibliographystyle{plainnat}
+\bibliographystyle{styles/plain}
 \bibliography{references}
 \addcontentsline{toc}{chapter}{Bibliografía}
 
