--- a/chapter8.tex
+++ b/chapter8.tex
@@ -12,7 +12,7 @@ En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactor
 \begin{figure}
   \centering
   % \includegraphics[width=0.5\linewidth]{figures/arquitecuta-sistema.png}
-  \caption{Arquitectura del sistema.}
+  \caption[Arquitectura del sistema.]{Arquitectura del sistema.}
   \label{fig:arquitectura-sistema}
 \end{figure}
 
