End footnotes with dot

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -144,7 +144,7 @@ Concretamente, a partir dichos componentes, \gls{bms}, \gls{pcs}, transformador 
 
 \begin{description}
 
-  \item[Estado de carga] Indica el porcentaje de energía en la batería. Es la variable más crítica para la toma de decisiones de carga y descarga. Expresado en porcentaje y megavatios hora\footnote{Dependiendo de la batería, aún todas siendo del mismo manufacturador, es expresado de un modo u otro, por alguna razón} y ofrecido por el \gls{bms}.
+  \item[Estado de carga] Indica el porcentaje de energía en la batería. Es la variable más crítica para la toma de decisiones de carga y descarga. Expresado en porcentaje y megavatios hora\footnote{Dependiendo de la batería, aún todas siendo del mismo manufacturador, es expresado de un modo u otro, por alguna razón.} y ofrecido por el \gls{bms}.
 
   \item[Estado de salud] Representa la capacidad actual de la batería en comparación con su capacidad nominal, reflejando su nivel de degradación a lo largo del tiempo. Expresado en porcentaje y megavatios hora\footnotemark[\value{footnote}] y ofrecido por el \gls{bms}.
 
