--- a/chapter7.tex
+++ b/chapter7.tex
@@ -53,7 +53,7 @@ Junto a ello, cabe destacar que no se han tenido en cuenta las gigantescas ayuda
 
 Pruebas empíricas en instalaciones de almacenamiento de energía en baterías en otras localizaciones en las que el sistema aún no ha sido desplegado, indican un enorme aumento en la eficiencia de la optimización.
 
-Agentes de mercado indican tener que realizar sesiones de dos horas diarias con el único propósito de introducir las posiciones de mercado manualmente y comunicárselas a los operadores de telecomunicaciones para mandar las consignas\footnote{Aunque estas instalaciones no cuenten con el flujo desarrollado del sistema en el que las señales son comunicadas con el sistema de información de planta, existe un flujo alternativo a través de SCADA para operaciones manuales, como ya se ha descrito anteriormente}. Este trabajo de consignación manual es extremadamente propenso ha errores y completamente, o difícilmente, incapaz de aprovechar la temporalidad del proceso de optimización debido a la cantidad de combinaciones exponenciales de las posiciones de mercado cuanto más aumenta el horizonte de optimización. Situación similar a la dificultad del calculo manual del mejor movimiento en ajedrez.
+Agentes de mercado indican tener que realizar sesiones de dos horas diarias con el único propósito de introducir las posiciones de mercado manualmente y comunicárselas a los operadores de telecomunicaciones para mandar las consignas\footnote{Aunque estas instalaciones no cuenten con el flujo desarrollado del sistema en el que las señales son comunicadas con el sistema de información de planta, existe un flujo alternativo a través de SCADA para operaciones manuales, como ya se ha descrito anteriormente.}. Este trabajo de consignación manual es extremadamente propenso ha errores y completamente, o difícilmente, incapaz de aprovechar la temporalidad del proceso de optimización debido a la cantidad de combinaciones exponenciales de las posiciones de mercado cuanto más aumenta el horizonte de optimización. Situación similar a la dificultad del calculo manual del mejor movimiento en ajedrez.
 
 La comparativa entre los resultados manuales contra el proceso del sistema desarrollado favorecen el uso de un sistema automatizado que no solo mejore de forma directa las ganancias generadas, sino que tenga en cuenta el entorno al completo y modifique su comportamiento según el mismo.
 
