--- a/references.bib
+++ b/references.bib
@@ -291,6 +291,15 @@
   organization = {IEEE}
 }
 
+@inproceedings{karimi2019multi,
+  title        = {Multi Objective Optimization for Multi-Microgrid Energy Management: A Lexicography Approach},
+  author       = {Karimi, Hamid and Jadid, Shahram},
+  booktitle    = {2019 International Power System Conference (PSC)},
+  pages        = {679--686},
+  year         = {2019},
+  organization = {IEEE}
+}
+
 @mastersthesis{kivipelto2017grid,
   title  = {Grid Scale Battery Energy Storage Investment Potential-Analysis and Simulations of Frequency Control Markets in Germany and the UK},
   author = {Kivipelto, Samuli},
